# chronosynthea

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFESTO.md  PERFORMANCE.md  README.md  STRATEGY.md  repo-config.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/chronosynthea/: Cargo.toml
crates/chronosynthea-cde/: Cargo.toml
crates/chronosynthea-cde/benches/: cde_encoding.rs
crates/chronosynthea-cde/src/: axis.rs  config.rs  encode.rs  error.rs  features.rs  lib.rs  metrics.rs  signature.rs
crates/chronosynthea-core/: Cargo.toml
crates/chronosynthea-core/benches/: module_loading.rs
crates/chronosynthea-core/src/: error.rs  lib.rs  module.rs  patient.rs
crates/chronosynthea-core/src/module/: edge.rs  loader.rs  state.rs  types.rs
crates/chronosynthea-gen/: Cargo.toml
crates/chronosynthea-gen/benches/: patient_generation.rs
crates/chronosynthea-gen/src/: alias.rs  buffer.rs  config.rs  error.rs  generator.rs  lib.rs  parallel.rs  prevalence.rs
crates/chronosynthea-io/: Cargo.toml
crates/chronosynthea-io/src/: error.rs  format.rs  lib.rs  stream.rs
crates/chronosynthea-mss/: Cargo.toml
crates/chronosynthea-mss/benches/: mss_generation.rs
crates/chronosynthea-mss/src/: archetype.rs  arena.rs  batch.rs  cascade.rs  causal_dag.rs  cohort.rs  csv_writer.rs  error.rs  extractor.rs  fingerprint.rs  gpu.rs  java_compat.rs  lib.rs  parquet_writer.rs  reproducibility.rs  sampler.rs  stats.rs  synthea_fixtures.rs  synthehrella.rs  tables.rs  types.rs
crates/chronosynthea-mss/tests/: boltzmann_fit.rs  cascade_trajectory.rs  csv_full_parity.rs  csv_smoke.rs  csv_throughput.rs  e1_joint_mode.rs  e1_pairwise.rs  e1_recalibrate.rs  fingerprint_determinism.rs  java_validation.rs  perf_full.rs  seed_sweep.rs  simd_microbench.rs  synthehrella_export.rs  synthehrella_smoke.rs  temporal_smoke.rs  validation.rs
crates/chronosynthea/src/: main.rs
data/prevalence/: calibrated_registry.json  cascade_lags.json  cooccurrence.json.opt-in  cooccurrence_full.json.opt-in  encounter_stats.json.opt-in  onset_stats.json.opt-in  recalibration.json.opt-in
scripts/: extract_cascade_lags.py  extract_indication_distributions.py  extract_temporal_stats.py  synthehrella_evaluate.py
