[workspace]
resolver = "2"
members = [
    "crates/chronosynthea",
    "crates/chronosynthea-core",
    "crates/chronosynthea-cde",
    "crates/chronosynthea-gen",
    "crates/chronosynthea-io",
    "crates/chronosynthea-mss",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ChronoSynthea Contributors"]
license = "Apache-2.0"
repository = "https://github.com/the-chronomancer/chronosynthea"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.14"
thiserror = "2.0"

# Parallelism and performance
rayon = "1.10"
bumpalo = { version = "3.16", features = ["collections"] }
ahash = { version = "0.8", features = ["serde"] }
crossbeam-channel = "0.5"

# Binary serialization
rmp-serde = "1.3"

# Random number generation
rand = "0.8"
rand_xoshiro = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Compression and hashing
flate2 = "1.0"
sha2 = "0.10"

# SIMD
wide = "0.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Development dependencies
criterion = "0.5"

# Additional dependencies for MSS
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
smallvec = { version = "1.13", features = ["const_generics", "union"] }

# Faster general-purpose allocator. The CSV-write hot path produces
# transient String/Vec<u8> allocations that the bumpalo arena can't
# capture; mimalloc reduces that traffic by ~10–15% on alloc-heavy
# workloads (chronosynthea CSV emit is in that category — see the
# council perf pass notes).
mimalloc = { version = "0.1", default-features = false }
# Hot-path integer/UUID hex emission without format!() machinery.
itoa = "1.0"

# GPU compute (Vulkan/Metal/DX12 backend). Used by the experimental
# `gpu` feature in chronosynthea-mss for per-patient byte emission off
# the CPU. Gated behind a feature flag to keep the default build
# closure small.
wgpu = "22"
pollster = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true

# Release-equivalent codegen with full debug info AND frame pointers
# retained for samply / perf / flamegraph runs. Profile stacks rely on
# either frame pointers or full unwind tables; release ships with
# `panic = "abort"` which trims unwind info, breaking samply's stack
# walk. We override both here.
[profile.profiling]
inherits = "release"
debug = "full"
strip = false
panic = "unwind"
