[package]
name = "chronosynthea-core"
description = "Core types for ChronoSynthea synthetic patient generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "module_loading"
harness = false
