[package]
name = "chronosynthea-core"
description = "Shared core types and Synthea module loaders for ChronoSynthea — used by the MSS generator and the CDE encoders"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "module_loading"
harness = false
