[package]
name = "chronosynthea-io"
description = "I/O formats and streaming for ChronoSynthea"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chronosynthea-core = { path = "../chronosynthea-core" }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
chrono = { workspace = true }
