[package]
name = "chronosynthea-io"
description = "I/O helpers and stream formatting for ChronoSynthea — Parquet writers live in `chronosynthea-mss` behind the `parquet` feature"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chronosynthea-core = { path = "../chronosynthea-core" }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
chrono = { workspace = true }
