[package]
name = "chronosynthea-mss"
description = "Minimally Sufficient Statistic encoding for ultra-fast patient generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chronosynthea-core = { path = "../chronosynthea-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
bumpalo = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
chrono = { workspace = true }
wide = { workspace = true }
rmp-serde = { workspace = true }
flate2 = { workspace = true }
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
smallvec = { version = "1.13", features = ["const_generics", "union"] }
itoa = { workspace = true }
# Used by src/bin/csv_bench.rs as the global allocator. Optional for lib
# consumers; pulling it in always saves a separate dev-deps split and
# keeps the bin's allocator choice visible in the crate manifest.
mimalloc = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "csv_bench"
path = "src/bin/csv_bench.rs"

[[bench]]
name = "mss_generation"
harness = false
