[package]
name = "chronosynthea-mss"
description = "Sampling-based synthetic patient generator: the MSS fingerprint, Rayon+SIMD generator, Parquet writers, cohort-query AST, and reproducibility manifest for ChronoSynthea"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chronosynthea-core = { path = "../chronosynthea-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
bumpalo = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
chrono = { workspace = true }
wide = { workspace = true }
rmp-serde = { workspace = true }
flate2 = { workspace = true }
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
sha2 = { workspace = true }
smallvec = { version = "1.13", features = ["const_generics", "union"] }
itoa = { workspace = true }
# Used by src/bin/csv_bench.rs as the global allocator. Optional for lib
# consumers; pulling it in always saves a separate dev-deps split and
# keeps the bin's allocator choice visible in the crate manifest.
mimalloc = { workspace = true }

# Optional GPU compute path. Behind a feature flag because wgpu adds
# ~60 transitive deps and a few minutes to a fresh build. Enable with
# `--features gpu`.
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

# Optional Arrow / Parquet output paths. Behind `parquet` feature.
# Adds ~50 transitive deps (mostly arrow + compression codecs).
arrow = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]
parquet = ["dep:arrow", "dep:arrow-array", "dep:arrow-schema", "dep:parquet"]

[dev-dependencies]
criterion = { workspace = true }

[[bin]]
name = "csv_bench"
path = "src/bin/csv_bench.rs"

[[bin]]
name = "gpu_uuid_bench"
path = "src/bin/gpu_uuid_bench.rs"
required-features = ["gpu"]

[[bin]]
name = "parquet_bench"
path = "src/bin/parquet_bench.rs"
required-features = ["parquet"]

[[bin]]
name = "csv_to_parquet"
path = "src/bin/csv_to_parquet.rs"
required-features = ["parquet"]

[[bin]]
name = "parquet_stream_bench"
path = "src/bin/parquet_stream_bench.rs"
required-features = ["parquet"]

[[bin]]
name = "cohort_demo"
path = "src/bin/cohort_demo.rs"
required-features = ["parquet"]

[[bench]]
name = "mss_generation"
harness = false
