[package]
name = "chronosynthea"
description = "High-performance synthetic patient generation with Coleman Dimensional Encoding"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chronosynthea-core = { path = "../chronosynthea-core" }
chronosynthea-cde = { path = "../chronosynthea-cde" }
chronosynthea-gen = { path = "../chronosynthea-gen" }
chronosynthea-io = { path = "../chronosynthea-io" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
mimalloc = { workspace = true }

[[bin]]
name = "chronosynthea"
path = "src/main.rs"
