[package]
name = "chronosynthea"
description = "CLI for ChronoSynthea — generate, validate, and run cohort queries over Java Synthea-equivalent synthetic patient data, sampled from a calibrated MSS fingerprint"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chronosynthea-core = { path = "../chronosynthea-core" }
chronosynthea-cde = { path = "../chronosynthea-cde" }
chronosynthea-gen = { path = "../chronosynthea-gen" }
chronosynthea-io = { path = "../chronosynthea-io" }
chronosynthea-mss = { path = "../chronosynthea-mss", features = ["parquet"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
mimalloc = { workspace = true }

[[bin]]
name = "chronosynthea"
path = "src/main.rs"
